Fix spacing on footer

--- a/app/assets/styles/components/_subscribe.scss
+++ b/app/assets/styles/components/_subscribe.scss
@@ -63,7 +63,7 @@
 
   &__text {
     @extend .body-copy;
-    margin: 10px 0 20px;
+    margin: 30px 0 50px;
   }
 
   &__subscribed {
